content updated. ECR horizontal view cut off solved

--- a/css/ecr.css
+++ b/css/ecr.css
@@ -14,7 +14,8 @@ h1 {
 }
 
 .ecr-section {
-  height:100%;
+  height: auto;
+  min-height: 100% !important;
   background-color: #fff;
   overflow: hidden;
 }
